--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bitcore-wallet-client-anon",
   "description": "Client for bitcore-wallet-service-anon",
   "author": "Anon Community",
-  "version": "1.0.3",
+  "version": "1.0.0",
   "license": "MIT",
   "keywords": [
     "bitcoin",
@@ -26,9 +26,9 @@
   "dependencies": {
     "async": "^0.9.0",
     "bip38": "^1.3.0",
-    "bitcore-lib-anon": "git+https://github.com/anonymousbitcoin/bitcore-lib-anon.git",
-    "bitcore-mnemonic": "^1.2.2",
-    "bitcore-payment-protocol": "^1.2.2",
+    "bitcore-lib-anon": "^1.0.3",
+    "bitcore-mnemonic": "^1.0.0",
+    "bitcore-payment-protocol": "^1.0.0",
     "json-stable-stringify": "^1.0.0",
     "lodash": "^4.17.4",
     "preconditions": "^1.0.8",
@@ -36,7 +36,7 @@
     "superagent": "^3.4.1"
   },
   "devDependencies": {
-    "bitcore-wallet-service-anon": "git+https://github.com/anonymousbitcoin/bitcore-wallet-service-anon.git",
+    "bitcore-wallet-service-anon": "^1.0.0",
     "browserify": "^13.1.0",
     "chai": "^1.9.1",
     "coveralls": "^2.11.2",
