--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "url": "https://github.com/anonymousbitcoin/bitcore-wallet-client-anon/issues"
   },
   "dependencies": {
+    "bitcore-wallet-service-anon": "^1.0.0",
     "async": "^0.9.0",
     "bip38": "^1.3.0",
     "bitcore-lib-anon": "^1.0.3",
-    "bitcore-mnemonic": "^1.0.0",
-    "bitcore-payment-protocol": "^1.0.0",
+    "bitcore-mnemonic-anon": "^1.0.0",
+    "bitcore-payment-protocol-anon": "^1.0.0",
     "json-stable-stringify": "^1.0.0",
     "lodash": "^4.17.4",
     "preconditions": "^1.0.8",
